95 add ProductDetail.vue

--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -1,5 +1,5 @@
-@mixin flex-center {
+@mixin flex-header {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
