--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -3,3 +3,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@mixin flex-cc {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
