--- a/frontend/src/styles/fonts.scss
+++ b/frontend/src/styles/fonts.scss
@@ -65,12 +65,12 @@
   font-display: swap;
 }
 
-/* ----------------- TT TRAVELS TRIAL ----------------- */
+/* ----------------- TT TRAVELS TEXT ----------------- */
 
 /* ExtraLight 200 */
 @font-face {
   font-family: 'TT-ExtraLight';
-  src: url('@/assets/fonts/TT Travels Trial ExtraLight.otf') format('opentype');
+  src: url('@/assets/fonts/TT Travels Text Trial ExtraLight.ttf') format('opentype');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -79,7 +79,7 @@
 /* Light 300 */
 @font-face {
   font-family: 'TT-Light';
-  src: url('@/assets/fonts/TT Travels Trial Light.otf') format('opentype');
+  src: url('@/assets/fonts/TT Travels Text Trial Light.ttf') format('opentype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -88,7 +88,7 @@
 /* Regular 400 */
 @font-face {
   font-family: 'TT-Regular';
-  src: url('@/assets/fonts/TT Travels Trial Regular.otf') format('opentype');
+  src: url('@/assets/fonts/TT Travels Text Trial Regular.ttf') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -97,7 +97,7 @@
 /* Medium 500 */
 @font-face {
   font-family: 'TT-Medium';
-  src: url('@/assets/fonts/TT Travels Trial Medium.otf') format('opentype');
+  src: url('@/assets/fonts/TT Travels Text Trial Medium.ttf') format('opentype');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -106,7 +106,7 @@
 /* DemiBold 600 */
 @font-face {
   font-family: 'TT-DemiBold';
-  src: url('@/assets/fonts/TT Travels Trial DemiBold.otf') format('opentype');
+  src: url('@/assets/fonts/TT Travels Text Trial DemiBold.ttf') format('opentype');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -115,7 +115,7 @@
 /* Bold 700 */
 @font-face {
   font-family: 'TT-Bold';
-  src: url('@/assets/fonts/TT Travels Trial Bold.otf') format('opentype');
+  src: url('@/assets/fonts/TT Travels Text Trial Bold.ttf') format('opentype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -124,7 +124,7 @@
 /* ExtraBold 800 */
 @font-face {
   font-family: 'TT-ExtraBold';
-  src: url('@/assets/fonts/TT Travels Trial ExtraBold.otf') format('opentype');
+  src: url('@/assets/fonts/TT Travels Text Trial ExtraBold.ttf') format('opentype');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
