207 new ability to add/remove reviews and change parameters has been added to the admin panel

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,7 +1,27 @@
-// цвета
-$background-color: #DEDEDE;
-$accent:  #ff6b6b;
+/* --------------------- ЦВЕТА --------------------- */
 
-// отступы и радиусы
+$white-100: rgb(255, 255, 255, 1);
+$white-80: rgba(255, 255, 255, 0.8);
+$white-60: rgba(255, 255, 255, 0.6);
+$white-40: rgba(255, 255, 255, 0.4);
+
+$black-100: rgb(10, 10, 10, 1);
+$black-60: rgb(10, 10, 10, 0.6);
+$black-40: rgb(10, 10, 10, 0.4);
+$black-25: rgb(10, 10, 10, 0.25);
+
+$grey-95: rgb(241, 241, 241, 1);
+$grey-90: rgb(230, 230, 230, 1);
+$grey-89: rgb(227, 227, 227, 1);
+$grey-87: rgb(222, 222, 222, 1);
+$grey-30: rgb(77, 77, 77, 1);
+$grey-20: rgb(51, 51, 51, 1);
+
+$red-active: rgb(255, 60, 2, 1);
+$red-error: rgb(229, 52, 47, 1);
+
+
+/* --------------------- РАЗМЕРЫ --------------------- */
+
 $border-radius: 0.5rem;
 $gap: 1rem;
