--- a/frontend/src/styles/fonts.scss
+++ b/frontend/src/styles/fonts.scss
@@ -1,26 +1,5 @@
-/* src/assets/styles/fonts.scss */
-
 /* --------------------- MANROPE --------------------- */
 
-/* ExtraLight 200 */
-@font-face {
-  font-family: 'Manrope-ExtraLight';
-  src: url('@/assets/fonts/Manrope-ExtraLight.ttf') format('truetype');
-  font-weight: 200;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* Light 300 */
-@font-face {
-  font-family: 'Manrope-Light';
-  src: url('@/assets/fonts/Manrope-Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* Regular 400 */
 @font-face {
   font-family: 'Manrope-Regular';
   src: url('@/assets/fonts/Manrope-Regular.ttf') format('truetype');
@@ -29,7 +8,6 @@
   font-display: swap;
 }
 
-/* Medium 500 */
 @font-face {
   font-family: 'Manrope-Medium';
   src: url('@/assets/fonts/Manrope-Medium.ttf') format('truetype');
@@ -38,7 +16,6 @@
   font-display: swap;
 }
 
-/* SemiBold 600 */
 @font-face {
   font-family: 'Manrope-SemiBold';
   src: url('@/assets/fonts/Manrope-SemiBold.ttf') format('truetype');
@@ -47,85 +24,44 @@
   font-display: swap;
 }
 
-/* Bold 700 */
+/* ----------------- BOUNDED ----------------- */
+
 @font-face {
-  font-family: 'Manrope-Bold';
-  src: url('@/assets/fonts/Manrope-Bold.ttf') format('truetype');
-  font-weight: 700;
+  font-family: 'Bounded-250';
+  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
+  font-weight: 250;
   font-style: normal;
   font-display: swap;
 }
 
-/* ExtraBold 800 */
 @font-face {
-  font-family: 'Manrope-ExtraBold';
-  src: url('@/assets/fonts/Manrope-ExtraBold.ttf') format('truetype');
-  font-weight: 800;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* ----------------- TT TRAVELS TEXT ----------------- */
-
-/* ExtraLight 200 */
-@font-face {
-  font-family: 'TT-ExtraLight';
-  src: url('@/assets/fonts/TT Travels Text Trial ExtraLight.ttf') format('opentype');
-  font-weight: 200;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* Light 300 */
-@font-face {
-  font-family: 'TT-Light';
-  src: url('@/assets/fonts/TT Travels Text Trial Light.ttf') format('opentype');
+  font-family: 'Bounded-300';
+  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 
-/* Regular 400 */
 @font-face {
-  font-family: 'TT-Regular';
-  src: url('@/assets/fonts/TT Travels Text Trial Regular.ttf') format('opentype');
+  font-family: 'Bounded-350';
+  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
+  font-weight: 350;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Bounded-400';
+  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
-/* Medium 500 */
 @font-face {
-  font-family: 'TT-Medium';
-  src: url('@/assets/fonts/TT Travels Text Trial Medium.ttf') format('opentype');
+  font-family: 'Bounded-500';
+  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
   font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* DemiBold 600 */
-@font-face {
-  font-family: 'TT-DemiBold';
-  src: url('@/assets/fonts/TT Travels Text Trial DemiBold.ttf') format('opentype');
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* Bold 700 */
-@font-face {
-  font-family: 'TT-Bold';
-  src: url('@/assets/fonts/TT Travels Text Trial Bold.ttf') format('opentype');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* ExtraBold 800 */
-@font-face {
-  font-family: 'TT-ExtraBold';
-  src: url('@/assets/fonts/TT Travels Text Trial ExtraBold.ttf') format('opentype');
-  font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
