--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $white-100: rgb(255, 255, 255, 1);
 $white-80: rgba(255, 255, 255, 0.8);
 $white-60: rgba(255, 255, 255, 0.6);
 $white-40: rgba(255, 255, 255, 0.4);
+$white-10: rgba(255, 255, 255, 0.1);
 
 $black-100: rgb(10, 10, 10, 1);
 $black-60: rgb(10, 10, 10, 0.6);
