--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -9,3 +9,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin flex-c-l {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
