211 edit footer layout

--- a/frontend/src/styles/fonts.scss
+++ b/frontend/src/styles/fonts.scss
@@ -65,3 +65,13 @@
   font-style: normal;
   font-display: swap;
 }
+
+/* ----------------- NEUE HAAS ----------------- */
+
+@font-face {
+  font-family: 'NeueHaas-500';
+  src: url('@/assets/fonts/NeueHaas-Medium.ttf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
