--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -15,3 +15,9 @@
   align-items: center;
   justify-content: left;
 }
+
+@mixin flex-e-c {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
