--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $black-100: rgb(10, 10, 10, 1);
 $black-60: rgb(10, 10, 10, 0.6);
 $black-40: rgb(10, 10, 10, 0.4);
 $black-25: rgb(10, 10, 10, 0.25);
+$black-10: rgb(10, 10, 10, 0.1);
 
 $grey-95: rgb(241, 241, 241, 1);
 $grey-90: rgb(230, 230, 230, 1);
