285 add delivery/contacts pages

--- a/frontend/src/styles/fonts.scss
+++ b/frontend/src/styles/fonts.scss
@@ -27,59 +27,8 @@
 /* ----------------- BOUNDED ----------------- */
 
 @font-face {
-  font-family: 'Bounded-250';
+  font-family: 'Bounded';
   src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
-  font-weight: 250;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Bounded-300';
-  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Bounded-350';
-  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
-  font-weight: 350;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Bounded-400';
-  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Bounded-500';
-  src: url('@/assets/fonts/Bounded-Variable.ttf') format('opentype');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-/* ----------------- NEUE HAAS ----------------- */
-
-@font-face {
-  font-family: 'NeueHaas-400';
-  src: url('@/assets/fonts/NeueHaas-Roman.ttf') format('opentype');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'NeueHaas-500';
-  src: url('@/assets/fonts/NeueHaas-Medium.ttf') format('opentype');
-  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
