328 implementation of product search requests

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $white-40: rgba(255, 255, 255, 0.4);
 $white-10: rgba(255, 255, 255, 0.1);
 
 $black-100: rgb(10, 10, 10, 1);
+$black-70: rgb(10, 10, 10, 0.7);
 $black-60: rgb(10, 10, 10, 0.6);
 $black-40: rgb(10, 10, 10, 0.4);
 $black-25: rgb(10, 10, 10, 0.25);
