--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,7 +1,16 @@
 @use "./index" as *;
 
+html {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+html::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
 body {
-  font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
+  background-color: $grey-87;
+  font-family: Manrope-Medium;
 }
