459 creating an order and displaying a list of orders in your merchant profile

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -22,6 +22,7 @@ $grey-20: rgb(51, 51, 51, 1);
 
 $red-active: rgb(255, 60, 2, 1);
 $red-error: rgb(229, 52, 47, 1);
+$green-active: rgb(28, 211, 68, 1);
 
 
 /* --------------------- РАЗМЕРЫ --------------------- */
